src/MACK/wwwroot/css/site.css
/** MACK CSS **/
@import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&family=Saira:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');

/****************************************
*          GLOBAL STYLES                *
*****************************************/

:root {
    --primary-color: rgb(166, 5, 5);
    --secondary-color: rgba(241, 241, 241, 0.3);
    --darker-black: #010101;
    --lighter-black: #191919;
    --primary-transparent: rgba(93, 0, 0, 0.857);
    --off-gray: #818181;
    --light-color: #f9f9f9;
    --bg-light: rgba(245, 245, 245, 0.975);
    --light-border: 1px solid #5a030326;
    --primary-border: 1px solid rgba(95, 3, 3, 0.399);
    --inset-unclicked: inset -1px -2px 12px -2px rgba(29, 18, 18, 0.223);
    --inset-clicked: inset 11px 14px 28px -10px rgba(114, 14, 14, 0.836);
    --danger-color: #d41f316e;
    --success-color: #28a745;
    --font-primary: 'Mulish', sans-serif;
    --font-headers: 'Saira', sans-serif;
}

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    font-family: 'Roboto', sans-serif;
    font-size: 1rem;
    line-height: 1.6;
    color: #fff;
    /* background: url('../images/hex-bg.jpg') center / cover; */
    background-repeat: repeat;
    /*background-color: #ffffffa7;*/
    background-color: var(--darker-black);
}

/*COLORING NEEDS TO BE CHANGED TO WHITE IF ON BLACK BG*/
h1, h2, h3 {
    font-family: var(--font-headers);
    font-weight: 300;
}

h2 {
    font-size: 2rem;
    line-height: 1.4;
}

a {
    color: var(--primary-color);
    text-decoration: none;
}

p {
    font-family: var(--font-primary);
    margin: 1rem auto;
    text-align: left;
}

/****************************************
*          PAGE STYLING                 *
*****************************************/

/* Banner */
.vehicle-data {
    width: 100%;
    height: auto;
    overflow: hidden;
    background-image: url('../images/car-hero.png');
    background-position: center center;
    background-size: 100% auto;
    background-repeat: no-repeat;
}

    .vehicle-data h2 {
        font-size: 3rem;
        margin: 2rem 0 2rem 3rem;
        color: var(--light-color);
    }

/* Navbar */
header {
    position: sticky;
    top: 0;
    width: 100%;
    z-index: 1000;
}

.navbar {
    display: flex;
    justify-content: space-between;
    font-family: var(--font-headers);
    font-size: 1rem;
    letter-spacing: 2px;
    text-transform: capitalize;
    background: var(--primary-color);
    align-items: center;
    padding: 0.7rem 2rem;
    z-index: 1000;
    width: 100%;
    height: 6rem;
    opacity: 1;
    position: relative;
    overflow: none;
    border-bottom: 1px solid rgba(74, 0, 0, 0.105);
}

.logo:active {
    transform: scale(0.99);
    opacity: .6;
}

.navbar ul {
    display: flex;
}

.navbar a {
    color: var(--light-color);
    padding: 0.45rem;
    margin: 0 1rem;
}


.nav-item:hover {
    color: var(--off-gray);
}

.nav-link {
    position: relative;
}

    .nav-link::after {
        content: '';
        position: absolute;
        bottom: 0;
        left: 0;
        width: 0;
        height: 2px;
        background-color: #e3e3e3;
        transition: width 0.3s ease-in-out;
    }

    .nav-link:hover::after {
        width: 100%;
    }

.navbar .welcome span {
    margin-right: 0.6rem;
}

.nav-item a:hover {
    color: #9f9f9f;
}

.navbar a li {
    position: relative;
    color: #e3e3e3;
    text-decoration: none;
}

    .navbar a li:hover {
        color: #9f9f9f;
    }

    .navbar a li::after {
        content: '';
        position: absolute;
        bottom: 0;
        left: 0;
        width: 0;
        height: 2px;
        background-color: #e3e3e3;
        transition: width 0.3s ease-in-out;
    }

    .navbar a li:hover::after {
        width: 100%;
    }

ul {
    list-style: none;
}

img {
    width: 100%;
}

.logo {
    width: clamp(100px, 20vw, 200px);
    height: auto;
    cursor: pointer;
}

/*HAMBURGER MENU*/
.hamburger {
    width: 30px;
    height: 20px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    cursor: pointer;
}

.line {
    width: 100%;
    height: 2px;
    background-color: var(--light-color);
    transition: transform 0.3s ease-in-out;
}

    .line.active {
        transform: rotate(45deg) translate(6px, 6px);
    }

        .line.active:nth-child(2) {
            opacity: 0;
            transform: rotate(45deg);
        }

        .line.active:last-child {
            transform: rotate(-45deg) translate(6px, -6px);
        }

.menu-container {
    position: relative;
}

.menu {
    opacity: 0;
    visibility: hidden;
    position: absolute;
    top: 100%;
    left: 0;
    width: 100%;
    background-color: var(--primary-color);
    border-radius: 0 0 10px 10px; /* Apply border radius to bottom right and left corners */
    transition: opacity 0.2s ease-in-out, visibility 0.2s ease-in-out;
    z-index: 9999;
    margin-top: .25rem;
    backdrop-filter: blur(8px);
}

    .menu.active {
        opacity: 1;
        visibility: visible;
    }

    .menu ul {
        list-style: none;
        padding: 0;
        margin: 0;
    }

    .menu li {
        padding: 10px;
    }

    .menu a {
        display: block;
        text-decoration: none;
        color: var(--light-color);
        font-family: var(--font-headers);
    }

    .menu li:hover {
        background-color: var(--bg-light);
    }

    .menu li:last-child:hover {
        border-radius: 0 0 10px 10px;
    }

    .menu li:hover a {
        color: var(--primary-color);
    }
/* ... */

